--- a/locale/it/debreate.po
+++ b/locale/it/debreate.po
@@ -13,7 +13,7 @@
 msgid   ""
 msgstr  "Project-Id-Version: Debreate 0.7.12\n"
         "Report-Msgid-Bugs-To: antumdeluge@gmail.com\n"
-        "POT-Creation-Date: 2022-09-02 16:42-0700\n"
+        "POT-Creation-Date: 2023-04-15 06:25-0700\n"
         "PO-Revision-Date: 2016-12-09 03:01-0800\n"
         "Last-Translator: Jordan Irwin <antumdeluge@gmail.com>\n"
         "Language-Team: Italian <antumdeluge@gmail.com>\n"
@@ -85,16 +85,13 @@ msgstr  ""
 msgid   "An error occurred during installation"
 msgstr  ""
 
-msgid   "An error occurred trying to create the configuration file:"
-msgstr  ""
-
 msgid   "An error occurred when trying to delete the build tree"
 msgstr  "Si è verificato un errore quando si tenta di eliminare la directory temporanea"
 
 msgid   "An error occurred when trying to update the distribution names cache"
 msgstr  ""
 
-msgid   "An unhandled error occured"
+msgid   "An unhandled error occurred"
 msgstr  ""
 
 msgid   "An unknown error occurred"
@@ -181,9 +178,6 @@ msgstr  ""
 msgid   "Cannot Continue"
 msgstr  "Non Può Continuare"
 
-msgid   "Cannot create config directory, file exists"
-msgstr  ""
-
 msgid   "Cannot decode, unrecognized mimetype: {}"
 msgstr  ""
 
@@ -191,9 +185,6 @@ msgid   "Cannot install package"
 msgstr  ""
 
 msgid   "Cannot move \"{}\" to trash, no write access"
-msgstr  ""
-
-msgid   "Cannot open config for writing, directory exists"
 msgstr  ""
 
 msgid   "Cannot run \"fakeroot dpkg\""
@@ -291,12 +282,6 @@ msgstr  "Commento"
 
 msgid   "Compressing changelog"
 msgstr  "Compressione dei changelog"
-
-msgid   "Configuration key \"{}\" = \"{}\", type: {}"
-msgstr  ""
-
-msgid   "Configuration key not found"
-msgstr  ""
 
 msgid   "Confirm"
 msgstr  "Conferma"
@@ -442,6 +427,10 @@ msgstr  "Debreate - Generatore di pacchetti Debian"
 
 msgid   "Debreate First Run"
 msgstr  "Prima Esecuzione di Debreate"
+
+#, fuzzy
+msgid   "Debreate Manual"
+msgstr  "Politica Manuale di Debian"
 
 msgid   "Debreate aids in building packages for installation on Debian based systems. Use the arrows located in the top-right corner or the \"Page\" menu to navigate through the program. For some information on Debian packages use the reference links in the \"Help\" menu."
 msgstr  "Debreate assiste nell'installazione di pacchetti di consruir per sistemi basati su Debian. Utilizzare le frecce in alto a destra o il menu \"Página\" per navigare attraverso il programma. \" Per informazioni sui pacchetti Debian, utilizzare i collegamenti di riferimento nel menu del \"Guida\"."
@@ -644,6 +633,9 @@ msgid   "Getting installed size"
 msgstr  ""
 
 msgid   "GitHub Project"
+msgstr  ""
+
+msgid   "GitLab Project"
 msgstr  ""
 
 msgid   "Got error when attempting to retrieve field value"
@@ -886,13 +878,10 @@ msgstr  ""
 msgid   "Not a valid Debreate project: {}"
 msgstr  ""
 
-msgid   "Not writing empty text to configuration"
-msgstr  ""
-
 msgid   "Obsolete"
 msgstr  ""
 
-msgid   "One line descriptions/synopsys"
+msgid   "One line descriptions/synopsis"
 msgstr  ""
 
 msgid   "One of the required fields is empty:"
@@ -929,9 +918,6 @@ msgid   "Open logs directory"
 msgstr  ""
 
 msgid   "Open pre-formatted control text"
-msgstr  ""
-
-msgid   "Opening log directory ..."
 msgstr  ""
 
 msgid   "Opening project from argument: {}"
@@ -1030,12 +1016,6 @@ msgstr  "Percorso \"{}\" non esiste."
 msgid   "Platform on which package/software is meant to run"
 msgstr  ""
 
-msgid   "Please report this error to Debreate's developers"
-msgstr  ""
-
-msgid   "Please report this error to one of the following addresses:"
-msgstr  ""
-
 msgid   "Post-Install"
 msgstr  "Postinstallar"
 
@@ -1116,9 +1096,6 @@ msgstr  ""
 
 msgid   "Quit?"
 msgstr  "Esci?"
-
-msgid   "Reading configuration file: {}"
-msgstr  ""
 
 msgid   "Recommended"
 msgstr  "Consigliato"
@@ -1247,7 +1224,7 @@ msgstr  "Sezione"
 msgid   "Section under which package managers will list this package"
 msgstr  ""
 
-msgid   "See \"Help ➜ Reference ➜ Launchers / Dekstop Entries\" for more available options"
+msgid   "See \"Help ➜ Reference ➜ Launchers / Desktop Entries\" for more available options"
 msgstr  ""
 
 msgid   "See \"Help ➜ Reference ➜ Lintian Tags Explanation\""
@@ -1295,8 +1272,9 @@ msgstr  ""
 msgid   "Source"
 msgstr  "Sorgente"
 
-msgid   "Sourceforge Project"
-msgstr  ""
+#, fuzzy
+msgid   "SourceForge Project"
+msgstr  "Salva progetto in corso"
 
 msgid   "Specifies whether application should be run in a terminal"
 msgstr  ""
@@ -1369,9 +1347,6 @@ msgstr  ""
 
 msgid   "Thank you for using Debreate."
 msgstr  "Grazie per utilizzare Debreate"
-
-msgid   "The \"md5sum\" command was not found on the system."
-msgstr  ""
 
 msgid   "The cache file exists but may not have been updated"
 msgstr  ""
@@ -1453,9 +1428,6 @@ msgstr  ""
 msgid   "Ubuntu Policy Manual"
 msgstr  "Politica Manuale di Ubuntu"
 
-msgid   "Uncheck the \"{}\" box."
-msgstr  ""
-
 msgid   "Unfortunately Debreate does not support unicode yet."
 msgstr  ""
 
@@ -1507,7 +1479,7 @@ msgstr  ""
 msgid   "Version"
 msgstr  "Versione"
 
-msgid   "Version corresponing to package name and operator"
+msgid   "Version corresponding to package name and operator"
 msgstr  ""
 
 msgid   "Version {} is available!"
@@ -1532,9 +1504,6 @@ msgid   "Would you like to go to Debreate's website?"
 msgstr  "Vuoi visitare al sitio web di Debreate?"
 
 msgid   "Writing manual pages"
-msgstr  ""
-
-msgid   "Wrong value type for configuration key"
 msgstr  ""
 
 msgid   "You will lose any unsaved information"
