Fix adding files via double-click in directory tree

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@ required for release:
 - examine changelog changes before release
 - close progress dialogs on errors so program doesn't freeze
 - Check for files being overwritten by duplicate items in file list before build
+- fix drag-and-drop files from directory tree
 
 priority:
 - use libdbr.tasks for build tasks
