--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@ required for release:
 - examine changelog changes before release
 
 priority:
+- fix mime type icon not showing for .dbp project files
 - remove hyphenation from development builds (use "XdevX" instead of "X-devX")
 - use libdbr.tasks for build tasks
 - use static size for progress dialogs (prevent 'cancel' button from jumping around)
