--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
 
 required for release:
 - examine changelog changes before release
+- change translation search warning show for non-native languages only
 
 priority:
 - 'dist-source' & 'deb-source' build tasks overwrite each other's package
