--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -45,6 +45,7 @@ next
 - build checks for file conflicts
 - unhandled exceptions in main thread causes app to close
 - added option to clean up file permissions on build page
+- no longer depends on external 'md5sum' command
 
 0.7.13
 - Fixes:
